@@ -1,3 +1,8 @@
+2008-02-11 00:29-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* PBPbxNativeTarget.m: Give meaningful error when the project type is
+	one that don't currently understand.
+
 2007-12-25 11:58-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* PBPbxGroup.m
